--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-Django==4.2
+# Django Framework
+Django==4.2.17
+
+# SQL Server Integration
 mssql-django==1.5
-python-decouple==3.8
 pyodbc==5.0.1
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-django-filter==23.5
+
+# Environment Variables
+python-decouple==3.8
+
+# Django REST Framework
+djangorestframework==3.15.2
+
+# CORS Support
+django-cors-headers==4.4.0
+
+# Filtering
+django-filter==24.3
+
+# Image Processing (para campo logo en Empresa)
+Pillow==10.4.0
